<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvRouteName"
        style="@style/RouteName1TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvLabelFrom"
            style="@style/RouteRow2TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvRouteStartTime"
            style="@style/RouteRow2TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/tvLabelDuration"
            style="@style/RouteRow2TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="6dp"
            android:text="@string/duration"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvRouteDuration"
            style="@style/RouteRow2TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvLabelTo"
            style="@style/RouteRow2TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvRouteStopTime"
            style="@style/RouteRow2TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/tvLabelSpeed"
            style="@style/RouteRow2TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="6dp"
            android:text="@string/average_speed"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvRouteSpeed"
            style="@style/RouteRow2TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvLabelDistance"
            style="@style/RouteRow2TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvRouteDistance"
            style="@style/RouteRow2TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>